# fgit-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: cli.rs  command.rs  config.rs  download.rs  main.rs
