[package]
name = "fgit"
version = "0.1.0"
authors = ["batkiz <batkiz@outlook.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-ini = "0.15.2"
regex = "1.3.9"
clap = { version = "3.0.0-beta.1", features = ["yaml"] }
anyhow = "1.0.31"
indicatif = "0.14.0"
reqwest = "0.10.6"
tokio = { version = "0.2.21", features = ["macros", "fs"] }
